main/matrix.c

#line 1 "main/matrix.c.rl"
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "freertos/queue.h"
#include "freertos/event_groups.h"
#include "driver/gpio.h"
#include "driver/rmt.h"
#include "esp_system.h"
#include "esp_wifi.h"
#include "esp_event.h"
#include "esp_log.h"
#include "nvs_flash.h"
#include "lwip/err.h"
#include "lwip/sys.h"
#include "lwip/sockets.h"
#include "lwip/netdb.h"
#include "lwip/dns.h"

#define GPIO_PIN 2
#define GPIO_PIN_SEL (1ULL << GPIO_PIN)
#define RMT_CHANNEL 1
#define RMT_CLOCK_DIV 4

// For these, one tick is 50ns.
#define RMT_TICKS_BIT_1_HIGH_WS2812 12 // 12*50ns = 600 ns
#define RMT_TICKS_BIT_1_LOW_WS2812  13 // 12*50ns = 650 ns
#define RMT_TICKS_BIT_0_HIGH_WS2812 5 // 12*50ns = 250 ns
#define RMT_TICKS_BIT_0_LOW_WS2812  20 // 20*50ns = 1000 ns
#define RMT_TICKS_RESET 510 // This isn't used now... i'm not sure what this value should be.

// This can be set pretty low, I don't remember what the exact number should
// be, check ws2811 datasheet.
#define LED_STRIP_REFRESH_PERIOD_MS (30U) 

#define WIFI_CONNECTED_BIT BIT0
#define NATS_CONNECTED_BIT BIT1

#define NUM_PIXELS 50

#define NATS_HOST "192.168.4.1"
#define NATS_PORT "4222"
#define NATS_BUF_LEN 512

static EventGroupHandle_t s_wifi_event_group;
static QueueHandle_t event_queue;

rmt_item32_t one = {
        .level0 = 1,
        .duration0 = RMT_TICKS_BIT_1_HIGH_WS2812,
        .level1 = 0,
        .duration1 = RMT_TICKS_BIT_1_LOW_WS2812
};

rmt_item32_t zero = {
        .level0 = 1,
        .duration0 = RMT_TICKS_BIT_0_HIGH_WS2812,
        .level1 = 0,
        .duration1 = RMT_TICKS_BIT_0_LOW_WS2812
};

rmt_item32_t reset = {
        .level0 = 0,
        .duration0 = 0,
        .level1 = 0,
        .duration1 = RMT_TICKS_RESET
};


struct matrix_rgb_s {
    uint8_t r;
    uint8_t g;
    uint8_t b;

};

struct matrix_rgb_s display_buf[NUM_PIXELS] = {0};
rmt_item32_t rmt_items[24*NUM_PIXELS] = {0};


static void event_handler (
    void* arg,
    esp_event_base_t event_base, 
    int32_t event_id,
    void* event_data)
{

    // Connect to wifi
    if (event_base == WIFI_EVENT && event_id == WIFI_EVENT_STA_START) {
        esp_wifi_connect();
    } else if (event_base == WIFI_EVENT && event_id == WIFI_EVENT_STA_DISCONNECTED) {
        esp_wifi_connect();
        xEventGroupClearBits(s_wifi_event_group, WIFI_CONNECTED_BIT);
        ESP_LOGI("H", "retry to connect to the AP");
    } else if (event_base == IP_EVENT && event_id == IP_EVENT_STA_GOT_IP) {
        ip_event_got_ip_t* event = (ip_event_got_ip_t*) event_data;
        ESP_LOGI("H", "got ip:" IPSTR, IP2STR(&event->ip_info.ip));
        xEventGroupSetBits(s_wifi_event_group, WIFI_CONNECTED_BIT);
    }
}


static void wifi_init_sta (
    void
)
{
    s_wifi_event_group = xEventGroupCreate();

    esp_netif_init();

    ESP_ERROR_CHECK(esp_event_loop_create_default());
    esp_netif_create_default_wifi_sta();

    wifi_init_config_t cfg = WIFI_INIT_CONFIG_DEFAULT();
    ESP_ERROR_CHECK(esp_wifi_init(&cfg));


    ESP_ERROR_CHECK(esp_event_handler_register(WIFI_EVENT, ESP_EVENT_ANY_ID, &event_handler, NULL));
    ESP_ERROR_CHECK(esp_event_handler_register(IP_EVENT, IP_EVENT_STA_GOT_IP, &event_handler, NULL));

    // I don't care that this password is in plaintext; it's not a secure
    // wifi - it's only for the led wall.
    wifi_config_t wifi_config = {
        .sta = {
            .ssid = "led-wall",
            .password = "nallenalle"
        },
    };
    ESP_ERROR_CHECK(esp_wifi_set_mode(WIFI_MODE_STA) );
    ESP_ERROR_CHECK(esp_wifi_set_config(ESP_IF_WIFI_STA, &wifi_config) );
    ESP_ERROR_CHECK(esp_wifi_start() );

    ESP_LOGI("H", "wifi_init_sta finished.");
}


// This function takes an rgb display buffer and draws it on the display
// using an rmt channel.
static void matrix_display_draw_rgb (
    rmt_item32_t * items,
    struct matrix_rgb_s * buf,
    uint32_t buf_len
)
{

    uint32_t rmt_i = 0;
    uint8_t bit;
    
    // For each pixel...
    for (int i = 0; i < buf_len; i++) {

        // Convert this pixels display buffer red to rmt_items.
        // For each bit in the buf[i].r, set the corresponding 
        for (bit = 8; bit > 0; bit--) {
            if ((buf[i].r >> (bit - 1)) & 1) {
                items[rmt_i] = one;
            } else {
                items[rmt_i] = zero;
            }
            rmt_i += 1;
        }

        // Same thing with green
        for (bit = 8; bit > 0; bit--) {
            if ((buf[i].g >> (bit - 1)) & 1) {
                items[rmt_i] = one;
            } else {
                items[rmt_i] = zero;
            }
            rmt_i += 1;
        }

        // And blue
        for (bit = 8; bit > 0; bit--) {
            if ((buf[i].b >> (bit - 1)) & 1) {
                items[rmt_i] = one;
            } else {
                items[rmt_i] = zero;
            }
            rmt_i += 1;
        }
    }

    // Finally, write out the buffer.
    rmt_write_items(
        /* rmt_channel_t channel = */ RMT_CHANNEL,
        /* rmt_item32_t * rmt_items = */ rmt_items,
        /* item_len = */ 24*buf_len,
        /* bool wait_tx_done = */ true
    );

}


static void nats_task (
    void * arg
)
{
    char buf[NATS_BUF_LEN];
    ssize_t bytes_read;
    ssize_t bytes_written;
    struct addrinfo hints = {
        .ai_family = AF_UNSPEC,
        .ai_socktype = SOCK_STREAM,
    };
    struct addrinfo *servinfo, *ap;
    int sockfd = 0;
    char *p, *pe, *eof = NULL;
    int cs = 0;
    uint8_t color_i = 0;

    
#line 217 "main/matrix.c"
static const int nats_start = 1;
static const int nats_first_final = 201;
static const int nats_error = 0;

static const int nats_en_msg = 16;
static const int nats_en_ping = 184;
static const int nats_en_info = 186;
static const int nats_en_loop = 192;
static const int nats_en_main = 1;


#line 229 "main/matrix.c"
	{
	cs = nats_start;
	}

#line 289 "main/matrix.c.rl"



    while (1) {

        // Wait until we're connected to the wifi
        xEventGroupWaitBits(
                /* event_group = */ s_wifi_event_group, 
                /* bit = */ WIFI_CONNECTED_BIT,
                false,
                true,
                portMAX_DELAY
        );
        ESP_LOGI("nats_task", "wifi is connected, connecting to nats at %s:%s...", NATS_HOST, NATS_PORT);

        // Find address of the nats server
        int ret = getaddrinfo(NATS_HOST, NATS_PORT, &hints, &servinfo);
        if (0 != ret) {
            /* Failed to get address information. Print an error message,
             * sleep for an hour and then try again. */
            ESP_LOGI("esp_task", "getaddrinfo failed");
            //fprintf(stderr, "getaddrinfo: %s\n", gai_strerror(ret));
            esp_restart();
        }

        // Loop over the results, try to connect to them.
        for (ap = servinfo; ap != NULL; ap = ap->ai_next) {
            sockfd = socket(ap->ai_family, ap->ai_socktype, ap->ai_protocol);
            if (-1 == sockfd) {
                ESP_LOGI("nats_task", "socket failed...");
                continue;
            }

            if (-1 == connect(sockfd, ap->ai_addr, ap->ai_addrlen)) {
                close(sockfd);
                ESP_LOGI("nats_task", "connect failed...");
                continue;
            }
        
            break;
        }
        freeaddrinfo(servinfo);

        if (NULL == ap) {
            ESP_LOGE("nats_task", "Connect failed!");
            esp_restart();
            // TODO: reset, or retry.
        }

        ESP_LOGI("nats_task", "Connected to NATS!");

        // Read loop on nats
        do {
            bytes_read = read(sockfd, buf, NATS_BUF_LEN);
            if (-1 == bytes_read) {
                ESP_LOGE("nats_task", "read returned -1");
                // todo: reset, or retry.
                esp_restart();
            }
            if (0 == bytes_read) {
                ESP_LOGE("nats_task", "connection to NATS closed!");
                // todo: reset, or retry.
                esp_restart();
            }

            p = buf;
            pe = buf + bytes_read;
            
#line 303 "main/matrix.c"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	if ( (*p) == 73 )
		goto st2;
	goto st0;
tr8:
#line 283 "main/matrix.c.rl"
	{ ESP_LOGE("nats_task", "err: %c (0x%02x)", *p, *p); }
	goto st0;
tr183:
#line 262 "main/matrix.c.rl"
	{ ESP_LOGE("nats_task_msg", "err: %c (0x%02x)", *p, *p); {goto st192;} }
	goto st0;
tr186:
#line 264 "main/matrix.c.rl"
	{ ESP_LOGE("nats_task_ping", "err: %c (0x%02x)", *p, *p); {goto st192;} }
	goto st0;
tr192:
#line 270 "main/matrix.c.rl"
	{ ESP_LOGE("nats_task_info", "err: %c (0x%02x)", *p, *p); {goto st192;} }
	goto st0;
tr196:
#line 277 "main/matrix.c.rl"
	{ ESP_LOGE("nats_task", "err in loop: %c (0x%02x) in state %d", *p, *p, cs); {goto st192;} }
	goto st0;
#line 333 "main/matrix.c"
st0:
cs = 0;
	goto _out;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( (*p) == 78 )
		goto st3;
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) == 70 )
		goto st4;
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) == 79 )
		goto st5;
	goto st0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) == 32 )
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 123 )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 125 )
		goto st8;
	goto st7;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	switch( (*p) ) {
		case 13: goto st9;
		case 32: goto st15;
	}
	goto tr8;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	if ( (*p) == 10 )
		goto tr11;
	goto tr8;
tr11:
#line 220 "main/matrix.c.rl"
	{
            ESP_LOGI("nats_task", "Subscribing to NATS topics...");
            bytes_written = write(sockfd, "SUB matrix1.in 1\r\n", strlen("SUB matrix1.in 1\r\n"));
            if (-1 == bytes_written || 0 == bytes_written) {
                ESP_LOGE("nats_task", "Failed to subscribe to matrix1.in!");
                esp_restart();
            }
        }
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 410 "main/matrix.c"
	if ( (*p) == 43 )
		goto st11;
	goto tr8;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	if ( (*p) == 79 )
		goto st12;
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	if ( (*p) == 75 )
		goto st13;
	goto st0;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	if ( (*p) == 13 )
		goto st14;
	goto st0;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	if ( (*p) == 10 )
		goto tr16;
	goto st0;
tr16:
#line 284 "main/matrix.c.rl"
	{ {goto st192;} }
	goto st201;
st201:
	if ( ++p == pe )
		goto _test_eof201;
case 201:
#line 450 "main/matrix.c"
	goto st0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	if ( (*p) == 13 )
		goto st9;
	goto tr8;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
	if ( (*p) == 32 )
		goto st17;
	goto st0;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	if ( (*p) == 109 )
		goto st18;
	goto st0;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	if ( (*p) == 97 )
		goto st19;
	goto st0;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
	if ( (*p) == 116 )
		goto st20;
	goto st0;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
	if ( (*p) == 114 )
		goto st21;
	goto st0;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	if ( (*p) == 105 )
		goto st22;
	goto st0;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
	if ( (*p) == 120 )
		goto st23;
	goto st0;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	if ( (*p) == 49 )
		goto st24;
	goto st0;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	if ( (*p) == 46 )
		goto st25;
	goto st0;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	if ( (*p) == 105 )
		goto st26;
	goto st0;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	if ( (*p) == 110 )
		goto st27;
	goto st0;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	if ( (*p) == 32 )
		goto st28;
	goto st0;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	if ( (*p) == 49 )
		goto st29;
	goto st0;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	if ( (*p) == 32 )
		goto st30;
	goto st0;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
	if ( (*p) == 49 )
		goto st31;
	goto st0;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
	if ( (*p) == 52 )
		goto st32;
	goto st0;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
	if ( (*p) == 55 )
		goto st33;
	goto st0;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
	if ( (*p) == 13 )
		goto st34;
	goto st0;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
	if ( (*p) == 10 )
		goto tr35;
	goto st0;
tr35:
#line 255 "main/matrix.c.rl"
	{ color_i = 0; }
	goto st35;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
#line 600 "main/matrix.c"
	goto tr36;
tr36:
#line 238 "main/matrix.c.rl"
	{
            display_buf[color_i].r = *p;
        }
	goto st36;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
#line 612 "main/matrix.c"
	goto tr37;
tr37:
#line 242 "main/matrix.c.rl"
	{
            display_buf[color_i].g = *p;
        }
	goto st37;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
#line 624 "main/matrix.c"
	goto tr38;
tr38:
#line 246 "main/matrix.c.rl"
	{
            display_buf[color_i].b = *p;
        }
#line 259 "main/matrix.c.rl"
	{ color_i += 1; }
	goto st38;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
#line 638 "main/matrix.c"
	goto tr39;
tr39:
#line 238 "main/matrix.c.rl"
	{
            display_buf[color_i].r = *p;
        }
	goto st39;
st39:
	if ( ++p == pe )
		goto _test_eof39;
case 39:
#line 650 "main/matrix.c"
	goto tr40;
tr40:
#line 242 "main/matrix.c.rl"
	{
            display_buf[color_i].g = *p;
        }
	goto st40;
st40:
	if ( ++p == pe )
		goto _test_eof40;
case 40:
#line 662 "main/matrix.c"
	goto tr41;
tr41:
#line 246 "main/matrix.c.rl"
	{
            display_buf[color_i].b = *p;
        }
#line 259 "main/matrix.c.rl"
	{ color_i += 1; }
	goto st41;
st41:
	if ( ++p == pe )
		goto _test_eof41;
case 41:
#line 676 "main/matrix.c"
	goto tr42;
tr42:
#line 238 "main/matrix.c.rl"
	{
            display_buf[color_i].r = *p;
        }
	goto st42;
st42:
	if ( ++p == pe )
		goto _test_eof42;
case 42:
#line 688 "main/matrix.c"
	goto tr43;
tr43:
#line 242 "main/matrix.c.rl"
	{
            display_buf[color_i].g = *p;
        }
	goto st43;
st43:
	if ( ++p == pe )
		goto _test_eof43;
case 43:
#line 700 "main/matrix.c"
	goto tr44;
tr44:
#line 246 "main/matrix.c.rl"
	{
            display_buf[color_i].b = *p;
        }
#line 259 "main/matrix.c.rl"
	{ color_i += 1; }
	goto st44;
st44:
	if ( ++p == pe )
		goto _test_eof44;
case 44:
#line 714 "main/matrix.c"
	goto tr45;
tr45:
#line 238 "main/matrix.c.rl"
	{
            display_buf[color_i].r = *p;
        }
	goto st45;
st45:
	if ( ++p == pe )
		goto _test_eof45;
case 45:
#line 726 "main/matrix.c"
	goto tr46;
tr46:
#line 242 "main/matrix.c.rl"
	{
            display_buf[color_i].g = *p;
        }
	goto st46;
st46:
	if ( ++p == pe )
		goto _test_eof46;
case 46:
#line 738 "main/matrix.c"
	goto tr47;
tr47:
#line 246 "main/matrix.c.rl"
	{
            display_buf[color_i].b = *p;
        }
#line 259 "main/matrix.c.rl"
	{ color_i += 1; }
	goto st47;
st47:
	if ( ++p == pe )
		goto _test_eof47;
case 47:
#line 752 "main/matrix.c"
	goto tr48;
tr48:
#line 238 "main/matrix.c.rl"
	{
            display_buf[color_i].r = *p;
        }
	goto st48;
st48:
	if ( ++p == pe )
		goto _test_eof48;
case 48:
#line 764 "main/matrix.c"
	goto tr49;
tr49:
#line 242 "main/matrix.c.rl"
	{
            display_buf[color_i].g = *p;
        }
	goto st49;
st49:
	if ( ++p == pe )
		goto _test_eof49;
case 49:
#line 776 "main/matrix.c"
	goto tr50;
tr50:
#line 246 "main/matrix.c.rl"
	{
            display_buf[color_i].b = *p;
        }
#line 259 "main/matrix.c.rl"
	{ color_i += 1; }
	goto st50;
st50:
	if ( ++p == pe )
		goto _test_eof50;
case 50:
#line 790 "main/matrix.c"
	goto tr51;
tr51:
#line 238 "main/matrix.c.rl"
	{
            display_buf[color_i].r = *p;
        }
	goto st51;
st51:
	if ( ++p == pe )
		goto _test_eof51;
case 51:
#line 802 "main/matrix.c"
	goto tr52;
tr52:
#line 242 "main/matrix.c.rl"
	{
            display_buf[color_i].g = *p;
        }
	goto st52;
st52:
	if ( ++p == pe )
		goto _test_eof52;
case 52:
#line 814 "main/matrix.c"
	goto tr53;
tr53:
#line 246 "main/matrix.c.rl"
	{
            display_buf[color_i].b = *p;
        }
#line 259 "main/matrix.c.rl"
	{ color_i += 1; }
	goto st53;
st53:
	if ( ++p == pe )
		goto _test_eof53;
case 53:
#line 828 "main/matrix.c"
	goto tr54;
tr54:
#line 238 "main/matrix.c.rl"
	{
            display_buf[color_i].r = *p;
        }
	goto st54;
st54:
	if ( ++p == pe )
		goto _test_eof54;
case 54:
#line 840 "main/matrix.c"
	goto tr55;
tr55:
#line 242 "main/matrix.c.rl"
	{
            display_buf[color_i].g = *p;
        }
	goto st55;
st55:
	if ( ++p == pe )
		goto _test_eof55;
case 55:
